[package]
name = "prj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ['json'] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
gql_client = "1.0.7"
anyhow = "1.0.66"
log = "0.4.17"
dotenv = "0.15.0"