[package]
name = "dev-works-logger"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/maemreyo/dev-works-logger"
description = """
A bot to collect data from Git
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.16.0"
reqwest = { version = "0.11.12", features = ['json'] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-cron-scheduler = "*"
gql_client = "1.0.7"
anyhow = "1.0.66"
env_logger = "0.9.0"
log = "0.4.17"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.10", optional = true }
chrono = "0.4.22"
rusttype = "0.9.3"